--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,16 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/button"
         android:layout_toEndOf="@+id/button2"
-        android:text="Button"
+        android:text="Grid"
         android:onClick="Grid"/>
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/button3"
+        android:layout_below="@+id/button3"
+        android:text="NNC"
+        android:onClick="NNCb"/>
 
 </RelativeLayout>
