--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/id_bn_getMyLocation"
-        android:background="@drawable/icon_target"
+        android:background="@drawable/location"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="60dp" />
@@ -85,5 +85,27 @@
         android:layout_below="@+id/button4"
         android:text="IC"
         android:onClick="ICb"/>
+
+    <EditText
+        android:id="@+id/editk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button5"
+        android:inputType="number"
+        android:ems="10"
+        android:text="3"
+        android:layout_alignStart="@+id/button5" />
+
+    <EditText
+        android:id="@+id/edits"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/editk"
+        android:inputType="number"
+        android:ems="10"
+        android:text="10000"
+        android:layout_alignStart="@+id/editk" />
 
 </RelativeLayout>
