--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,4 +109,13 @@
         android:text="确认"
         android:onClick="inputks"/>
 
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/button6"
+        android:text="Casper"
+            android:onClick="CCasper"/>
+
 </RelativeLayout>
