--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,4 +118,13 @@
         android:text="Casper"
             android:onClick="CCasper"/>
 
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/button7"
+        android:layout_below="@+id/button7"
+        android:text="NNCTEST"
+        android:onClick="NNCT"/>
+
 </RelativeLayout>
